Fix wrap bug for text

--- a/src/styles/Room.module.css
+++ b/src/styles/Room.module.css
@@ -1,5 +1,5 @@
 .messageContainer {
-  overflow: auto;
+  overflow-y: auto;
   position: relative;
 }
 
@@ -44,8 +44,10 @@
 }
 
 .messageItem {
+  width: 100%;
   word-wrap: break-word;
-  gap: 5px;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 
 .usersTitle {
@@ -57,6 +59,8 @@
 }
 
 .headerContainer {
+  position: sticky;
+  top: 0;
   border-bottom: 1px solid black;
 }
 
